--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <div id="part1">
 
-        <img src="assets/images/image 1.jpg" alt="" id="fotopredio">
+        <img src="assets/images/image 1 (1).jpg" alt="" id="fotopredio">
 
         <div id="outdoor">
 
@@ -102,7 +102,7 @@
         <h1>Vantagens:</h1>
 
         <div id="container-ul">
-          <ul>
+          <ul id="cont-vantagens">
             <li><p>Maior abrangência do mercado: Estamos presentes em 10 estados brasileiros e nas maiores capitais do país.</p></li>
             <li><p>Resultados comprovados por nossos clientes recorrentes: 90% dos nossos clientes retornam à trabalhar conosco e recomendam nossos serviços.</p></li>
             <li><p>Profissionais mais bem capacitados do mercado: Nossos colaboradores são especializados nas áreas mais essenciais do ramo.</p></li>
