--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
       </header>
     </div>
 
+    <div id="headerWeb">
+      <header>
+        <div id="logo">
+          <img src="assets/images/Design sem nome.png" alt="logo" id="logoheader">
+        </div>
+        <a href="" class="linkmenu">Home</a>
+        <a href="" class="linkmenu">Quem Somos</a>
+        <a href="" class="linkmenu">Contato</a>
+        <a href="" class="linkmenu">Orçamentos</a>
+        <div id="wpplink">
+          <i class="fab fa-whatsapp" id="wpp"></i>
+        </div>
+      </header>
+    </div>
+
     <div id="openclosenav">
       <div id="navmenu">
         <nav id="nav">
@@ -99,14 +114,15 @@
 
       <div id="part3">
 
-        <h1>Vantagens:</h1>
-
-        <div id="container-ul">
-          <ul id="cont-vantagens">
-            <li><p>Maior abrangência do mercado: Estamos presentes em 10 estados brasileiros e nas maiores capitais do país.</p></li>
-            <li><p>Resultados comprovados por nossos clientes recorrentes: 90% dos nossos clientes retornam à trabalhar conosco e recomendam nossos serviços.</p></li>
-            <li><p>Profissionais mais bem capacitados do mercado: Nossos colaboradores são especializados nas áreas mais essenciais do ramo.</p></li>
-          </ul>
+        <div id="part3cont">
+          <h1>Vantagens:</h1>
+          <div id="container-ul">
+            <ul id="cont-vantagens">
+              <li><p>Maior abrangência do mercado: Estamos presentes em 10 estados brasileiros e nas maiores capitais do país.</p></li>
+              <li><p>Resultados comprovados por nossos clientes recorrentes: 90% dos nossos clientes retornam à trabalhar conosco e recomendam nossos serviços.</p></li>
+              <li><p>Profissionais mais bem capacitados do mercado: Nossos colaboradores são especializados nas áreas mais essenciais do ramo.</p></li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -159,15 +175,28 @@
     <footer>
       <p id="footer-title">MX Consult | Consultoria</p>
 
-      <i class="fab fa-linkedin"></i>
-
-      <i class="fab fa-instagram-square"></i>
-
-      <i class="fab fa-whatsapp-square"></i>
-
-      <i class="fab fa-facebook-square"></i>
+      <div id="footer-icons">
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-instagram-square"></i>
+        <i class="fab fa-whatsapp-square"></i>
+        <i class="fab fa-facebook-square"></i>
+      </div>
 
       <p id="footer-contato">(99) 9999-9999 | contato@mxconsult.com.br</p>
+      
+    </footer>
+
+    <footer id="footer2">
+      <p id="footer-title2">MX Consult | Consultoria</p>
+
+      <p id="footer-contato2">(99) 9999-9999 | contato@mxconsult.com.br</p>
+
+      <div id="footer-icons2">
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-instagram-square"></i>
+        <i class="fab fa-whatsapp-square"></i>
+        <i class="fab fa-facebook-square"></i>
+      </div>
       
     </footer>
 
