--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
           </div> 
           <div id="cont-vantagens">
               <div class="block-part3 left-block">
-                <p><span class="span-bold">Maior abrangência do mercado:</span> Estamos presentes em 10 estados brasileiros e nas maiores capitais do país.</p>
+                <p class="txt-blockp3"><span class="span-bold">Maior abrangência do mercado:</span> Estamos presentes em 10 estados brasileiros e nas maiores capitais do país.</p>
               </div>
               <div class="block-part3 right-block">
-                <p><span class="span-bold">Resultados comprovados por nossos clientes recorrentes:</span> 90% dos nossos clientes retornam à trabalhar conosco e recomendam nossos serviços.</p>
+                <p class="txt-blockp3"><span class="span-bold">Resultados comprovados por nossos clientes recorrentes:</span> 90% dos nossos clientes retornam à trabalhar conosco e recomendam nossos serviços.</p>
               </div>
               <div class="block-part3 left-block">
-                <p><span class="span-bold">Profissionais mais bem capacitados do mercado:</span> Nossos colaboradores são especializados nas áreas mais essenciais do ramo.</p>
+                <p class="txt-blockp3"><span class="span-bold">Profissionais mais bem capacitados do mercado:</span> Nossos colaboradores são especializados nas áreas mais essenciais do ramo.</p>
               </div>
           </div>
         </div>
