--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               <option value="DF">DF</option>
             </select>
             <input type="text" name="cidade" id="inpt-city" class="setenta" placeholder="Cidade" required>
-            <input type="number" name="tel" id="inpt-tel" class="full" placeholder="Telefone - (ex.(99) 9999-9999)" required>
+            <input type="text" name="tel" id="inpt-tel" class="full" placeholder="Telefone - (ex.(99) 9999-9999)" required>
             <input type="text" name="email" id="inpt-email" class="full" placeholder="Email - (ex. nome@email.com)" required>
             <select name="tipo" id="inpt-type" class="full">
               <option value="padrao">Padrão (1 reunião privada por semana)</option>
